2007-03-20 Benoit Grégoire  <bock@step.polymtl.ca>
	* Shoutbox.php: Allow limiting the number of characters entered for a shout.  
	(Ideally, this would also need to be enforced at db write level).   
	Move the shout form in the list.
	Allow choosing the number of shouts displayed.
	Make the size of the shout field configurable from the admin interface
	Put the date of the shout before the username.
	* User.php:  Make the entire "edit profile" link CSS targetable, including the parentesis.

2007-03-20 Benoit Grégoire  <bock@step.polymtl.ca>
	* ProfileTemplateField.php:  Only allow simple content types as metadata.
	* Langstring.php:  Fix bug:  one couldn't change the language of a string without changing the actual text.
	* Content.php:  Add isExactContentType() method.
	* Profile-related visual and UI tweaks

2007-03-20 Benoit Grégoire  <bock@step.polymtl.ca>
	* Fix #304:  For some reason the Smarty assignement to userName used getListUI() instead of getUsername()???
	* Add HyperLink content type
	* Add UIUserList content type (work towards #158)
	* portal/index.php:  Finish refactoring Smarty usage.
	
2007-03-17 Benoit Grégoire  <bock@step.polymtl.ca>
	* install.php: Make sure we are in the right directory when uncompressing Smarty
	* Avatar.php:  Don't allow user to hyperlink the image.
	* ProfileTemplate:  Display how many profiles will be affected when deleting a template field.
	* User.php:  Don't show the profile creation button if the network has no profile template. 
	 Don't hyperlink the username if the user has no profile.

2007-03-16 Benoit Grégoire  <bock@step.polymtl.ca>
	* Lots of work on profiles.  The HTML and CSS are not final, but #18 can be considered closed.
	* ProfileField::getContentField():  Fix bug where the object wouldn't refresh properly.
	* Content:  Delicate refactoring of the UI to create new content.
	The content object now supports directly adding the actual values of a new 